--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Page acceleration based scroll animation.",
   "main": "lib/index.js",
   "scripts": {
+    "lint": "prettier src/**/*.{js,mjs} --write",
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "babel --presets es2015,stage-0 -d lib/ src/",
     "build": "webpack-cli",
@@ -22,12 +23,15 @@
     "window scroll"
   ],
   "devDependencies": {
+    "@swup/prettier-config": "^1.0.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "prettier": "^1.17.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1"
-  }
+  },
+  "prettier": "@swup/prettier-config"
 }
